--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 
 <!DOCTYPE html>
-<html data-wf-domain="www.outmarketing.ru" data-wf-page="58ade201fa81a5c54c77a809" data-wf-site="5857d8852e0823df044ad1d4">
-
+<html>
 <head>
 	<meta charset="utf-8"/>
 	<title>Агентство HR маркетинга Долгушева и Сторожилова</title>
 	<meta content="Помогаем хорошим продуктам выйти на рынок и наладить маркетинг. Вы развиваете продукт, мы заботимся о привлечении клиентов." name="description"/><meta content="Аутмаркетинг — удалённый отдел маркетинга" property="og:title"/>
 	<meta content="Помогаем хорошим продуктам выйти на рынок и наладить маркетинг. Вы развиваете продукт, мы заботимся о привлечении клиентов." property="og:description"/><meta content="https://daks2k3a4ib2z.cloudfront.net/5857d8852e0823df044ad1d4/58b18ea5d63ba01922067689_Opengraph.png" property="og:image"/><meta content="summary" name="twitter:card"/>
 	<meta content="width=device-width, initial-scale=1" name="viewport"/>
-	<meta content="GCy9wkB8U8YsHKL3KIG5K4R3qPmZa6sExq_GrYDuA5s" name="google-site-verification"/>
 	<link href="https://uploads-ssl.webflow.com/5857d8852e0823df044ad1d4/css/outmarketing.webflow.f7295dff7.css" rel="stylesheet" type="text/css"/>
 	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript"></script>
 	<script type="text/javascript">WebFont.load({  google: {    families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic"]  }});</script>
@@ -18,8 +16,6 @@
 	<script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
 	<link href="https://daks2k3a4ib2z.cloudfront.net/5857d8852e0823df044ad1d4/58b0185894558e53211829f9_favicon.png" rel="shortcut icon" type="image/x-icon"/>
 	<link href="https://daks2k3a4ib2z.cloudfront.net/5857d8852e0823df044ad1d4/58b0199d0e83d6927df2d088_256.png" rel="apple-touch-icon"/>
-	<script type="text/javascript">var _gaq = _gaq || [];_gaq.push(['_setAccount', 'UA-90319268-1'], ['_trackPageview']);(function() {  var ga = document.createElement('script');  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);})();</script>
-	<meta name="“google-site-verification”" content="“akMxquDgt22iBq0m7nkJyFvppequS91zZxvkWeHUROo”">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.1/remodal.min.css" rel="stylesheet" type="text/css">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.1/remodal-default-theme.min.css" rel="stylesheet" type="text/css">
 	<style>
@@ -31,7 +27,6 @@
 </head>
 
 <body class="body">
-
 	
 	<div class="top-block" style="margin-top:80px; min-height: 1550px;">
 		<div id="utp-screen" class="utp-screen">
@@ -46,28 +41,27 @@
 					Это то, чем мы занимаемся.
 					</p>
 				</div>
-
 			</div>
-					<div data-ix="appear-4" class="top-box">
-						<div class="fn1">
-							<div data-ix="circle-scale" class="round w-clearfix">
-								<div class="count">1</div>
-							</div>
-						<p class="utp-feature-txt">Разрабатываем стратегию и запускаем маркетинговые кампании для найма</p>
-						</div>
-						<div class="fn1">
-							<div data-ix="circle-scale" class="round w-clearfix">
-								<div class="count">2</div>
-							</div>
-						<p class="utp-feature-txt">Создаём и внедряем программы вовлечённости сотрудников</p>
-						</div>
-						<div class="fn1">
-							<div data-ix="circle-scale" class="round w-clearfix">
-								<div class="count">3</div>
-							</div>
-							<p class="utp-feature-txt">Считаем и контролируем эффективность</p>
-						</div>
-					</div>			
+			<div data-ix="appear-4" class="top-box">
+				<div class="fn1">
+					<div data-ix="circle-scale" class="round w-clearfix">
+						<div class="count">1</div>
+					</div>
+				<p class="utp-feature-txt">Разрабатываем стратегию и запускаем маркетинговые кампании для найма</p>
+				</div>
+				<div class="fn1">
+					<div data-ix="circle-scale" class="round w-clearfix">
+						<div class="count">2</div>
+					</div>
+				<p class="utp-feature-txt">Создаём и внедряем программы вовлечённости сотрудников</p>
+				</div>
+				<div class="fn1">
+					<div data-ix="circle-scale" class="round w-clearfix">
+						<div class="count">3</div>
+					</div>
+					<p class="utp-feature-txt">Считаем и контролируем эффективность</p>
+				</div>
+			</div>			
 		</div>
 	</div>
 
