--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript"></script>
 	<script type="text/javascript">WebFont.load({  google: {    families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic"]  }});</script>
 	<script src="https://use.typekit.net/dod5pnc.js" type="text/javascript"></script>
-	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+	
+	<!--script type="text/javascript">try{Typekit.load();}catch(e){}</script-->
+	
 	<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
 	<script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
 	<link href="https://daks2k3a4ib2z.cloudfront.net/5857d8852e0823df044ad1d4/58b0185894558e53211829f9_favicon.png" rel="shortcut icon" type="image/x-icon"/>
@@ -28,7 +30,7 @@
 
 <body class="body">
 	
-	<div class="top-block" style="margin-top:80px; min-height: 1550px;">
+	<div class="top-block" style="margin-top:80px; min-height: 1550px;font-family: "Rubik Mono One",ArialMT,Arial,"Helvetica Neue",Helvetica,Roboto,sans-serif";>
 		<div id="utp-screen" class="utp-screen">
 			<div class="top-box">
 				<div class="top-wrapper" style="max-width: 90%;">
