change font for h1

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 
 <body class="body">
 	
-	<div class="top-block" style="margin-top:80px; min-height: 1550px;font-family: "Rubik Mono One",ArialMT,Arial,"Helvetica Neue",Helvetica,Roboto,sans-serif";>
+	<div class="top-block" style="margin-top:80px; min-height: 1550px;>
 		<div id="utp-screen" class="utp-screen">
 			<div class="top-box">
 				<div class="top-wrapper" style="max-width: 90%;">
-					<h1 id="h1" data-ix="appear-1" class="h1 right">Мы помогаем IT-компаниям добывать себе сторонников среди инженеров</h1>
+					<h1 id="h1" data-ix="appear-1" class="h1 right" font-family: "Rubik Mono One",ArialMT,Arial,"Helvetica Neue",Helvetica,Roboto,sans-serif;>Мы помогаем IT-компаниям добывать себе сторонников среди инженеров</h1>
 					<p data-ix="appear-2" class="simple-text">Сторонники идут работать в компанию и приводят с собой знакомых. Внутри компании сторонники участвуют в улучшении процессов. Сторонникам не всё равно.</br></br>     
 					С людьми в IT всё непросто. Раньше было достаточно иметь в компании сильную экспертизу, интересные проекты и базовые точки входа (сайт, вакансии на внешних площадках). И люди шли к вам работать. Сейчас приходится заниматься активным хантингом. Классные специалисты выбирают среди предложений от компаний, а не компании среди толп соискателей.</br></br>     
 					Время закрытия вакансии и число холодных контактов на позицию – растут. Запросы и зарплаты кандидатов – растут. А вот уровень кандидатов растёт не в каждом случае. Непонятно, где искать классных специалистов. Классные специалисты не ищут работу. </br></br>  
