--- a/index.html
+++ b/index.html
@@ -74,28 +74,28 @@
 			</div>
 			<div class="cards-block">
 				<div data-ix="scroll-1" class="why-mobile">
-					<h4 class="table-element-h4">Хотите больше клиентов</h4>
-					<p class="p">Уже несколько лет на рынке и упёрлись в потолок спроса. Рынок знаете хорошо, но на маркетинг нет сил и времени.</p>
+					<h4 class="table-element-h4">Нанимаете много и на регулярной основе</h4>
+					<p class="p">Ваш бизнес развивается. У вас то и дело возникает потребность нанимать новых сотрудников, в связи с ростом числа клиентов, изменением масштаба или специфики проектов, или всего этого вместе. Вы хотите сделать найм более предсказуемым и удобным. А адаптацию новых сотрудников более эффективной.</p>
 				</div>
 				<div data-ix="scroll-2" class="why-mobile w-clearfix">
-					<h4 class="table-element-h4">Запускаете новый продукт</h4>
-					<p class="p">Вы собрали команду, сделали MVP и прошли первый раунд. Хочется на старте сделать всё хорошо. В том числе маркетинг.</p>
+					<h4 class="table-element-h4">Для вас критично качество найма</h4>
+					<p class="p">Открытые вакансии могут возникать у вас не сильно часто. Но в те моменты, когда вакансии есть, вам важно тратить меньше времени на нахождение подходящих кандидатов. А ещё вам важно находить соискателей, которые будут лучше вливаться, будут близкими по духу для команды. </p>
 				</div>
 				<div data-ix="scroll-1" class="why-mobile w-clearfix">
-					<h4 class="table-element-h4">Строите отдел маркетинга</h4>
+					<h4 class="table-element-h4">Хотите раскрыть потенциал уже собранной команды</h4>
 					<p class="p">Вы уже наняли маркетолога и видите большой потенциал, но для рывка нужен кто-то вроде маркетинг-директора.</p>
 				</div>
 				<div data-ix="scroll-2" class="why-mobile w-clearfix">
-					<h4 class="table-element-h4">Нужно улучшить продажи</h4>
-					<p class="p">Не знаете, как обрабатывать заявки от клиентов. Куча сделок срывается из-за плохой конверсии в продажи.</p>
+					<h4 class="table-element-h4">Уже делаете эйчаркетинг</h4>
+					<p class="p">Ваши сотрудники выступают на конференциях и пишут статьи. Возможно, у вас есть люди, которые занимаются организацией и поддержанием процессов эйчаркетинга. Вы видите в этом направлении большой потенциал, но ощущаете, что для качественного рывка нужен импульс.</p>
 				</div>
 				<div data-ix="scroll-1" class="useless why-mobile">
 					<h4 class="table-element-h4">Мы бесполезны, когда:</h4>
 					<ul class="list">
-						<li class="list-item">нужен фестивальный кейс, вирус, нейромаркетинг и некромантия</li>
-						<li class="list-item">продукт на стадии идеи, а платить планируете будущими акциями</li>
-						<li class="list-item">нужен аудит или совет, который некому будет делать руками</li>
-						<li>любите микроменеджмент и не готовы доверить нам тактику</li>
+						<li class="list-item">нужно разовое мероприятие — закрыть горящую вакансию и больше ничего</li>
+						<li class="list-item">нужен аудит, инсайты из которого некому будет делать руками</li>
+						<li class="list-item">ваша бизнес-модель не предполагает профессионального роста сотрудников</li>
+						<li>Любите микроменеджмент и не готовы доверить нам тактику по части эйчаркетинга</li>
 					</ul>
 				</div>
 			</div>
