--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 	<meta content="Помогаем хорошим продуктам выйти на рынок и наладить маркетинг. Вы развиваете продукт, мы заботимся о привлечении клиентов." property="og:description"/><meta content="https://daks2k3a4ib2z.cloudfront.net/5857d8852e0823df044ad1d4/58b18ea5d63ba01922067689_Opengraph.png" property="og:image"/><meta content="summary" name="twitter:card"/>
 	<meta content="width=device-width, initial-scale=1" name="viewport"/>
 	<link href="https://uploads-ssl.webflow.com/5857d8852e0823df044ad1d4/css/outmarketing.webflow.f7295dff7.css" rel="stylesheet" type="text/css"/>
-	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript"></script>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript"></script>	
 	<script type="text/javascript">WebFont.load({  google: {    families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic"]  }});</script>
-	<script src="https://use.typekit.net/dod5pnc.js" type="text/javascript"></script>
 	
+	<!--script src="https://use.typekit.net/dod5pnc.js" type="text/javascript"></script-->
 	<!--script type="text/javascript">try{Typekit.load();}catch(e){}</script-->
 	
 	<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
@@ -194,18 +195,17 @@
 	<div class="who">
 		<div id="who" class="dima-block">
 			<div class="info-box">
-				<a target="_blank" href="https://www.facebook.com/profile.php?id=1006819863" class="round-link w-inline-block"><img src="https://uploads-ssl.webflow.com/5857d8852e0823df044ad1d4/58af3b0c9b550daa2d2ed702_Antokha.png" data-ix="scroll-1" srcset="https://uploads-ssl.webflow.com/5857d8852e0823df044ad1d4/58af3b0c9b550daa2d2ed702_Antokha-p-500x460.png 500w, https://uploads-ssl.webflow.com/5857d8852e0823df044ad1d4/58af3b0c9b550daa2d2ed702_Antokha.png 930w" sizes="(max-width: 479px) 80vw, (max-width: 767px) 70vw, (max-width: 991px) 320px, 410px"/></a>
-				<h4 data-ix="scroll-1" class="h3 _2">Антон Шаяхов</h4>
-				<p data-ix="scroll-1" class="caps">стратегия и управление<a href="https://hotellook.com" class="link-inline"></a></p>
-				<p data-ix="scroll-1" class="bio-txt">Запускал <a href="https://e-kontur.ru" class="link-inline">Эльбу</a>, отвечал за мобильный маркетинг <a href="https://www.aviasales.ru/?marker=17254" class="link-inline">Aviasales</a>, был биздевом <a href="https://knopka.com" class="link-inline">Кнопки</a>, поднимает монетизацию <a href="https://mobile.yandex.ru/apps/iphone/navigator/#main" class="link-inline">Яндекс.Навигатора</a>
-				</p>
+				<a target="_blank" href="https://www.facebook.com/profile.php?id=1006819863" class="round-link w-inline-block"><img src="https://mrmixsun.github.io/agency/dist/alyoshka.png" data-ix="scroll-1" srcset="https://mrmixsun.github.io/agency/dist/alyoshka.png 500w, https://mrmixsun.github.io/agency/dist/alyoshka.png 930w" sizes="(max-width: 479px) 80vw, (max-width: 767px) 70vw, (max-width: 991px) 320px, 410px"/></a>
+				<h4 data-ix="scroll-1" class="h3 _2">Лёша Долгушев</h4>
+				<p data-ix="scroll-1" class="caps">стратегия и планирование</p>
+				<p data-ix="scroll-1" class="bio-txt">Программировал машинное зрение, делал онлайн и оффлайн маркетинг, управлял проектами, управлял продуктами, организовывал CodeFest.</p>
 			</div>
 
 			<div class="info-box">
-				<a target="_blank" href="https://www.facebook.com/aleksey.shayahov" class="round-link w-inline-block"><img src="https://uploads-ssl.webflow.com/5857d8852e0823df044ad1d4/58b2b0f5a93b07636e1afa93_Alex.png" data-ix="scroll-1" srcset="https://uploads-ssl.webflow.com/5857d8852e0823df044ad1d4/58b2b0f5a93b07636e1afa93_Alex-p-500x460.png 500w, https://uploads-ssl.webflow.com/5857d8852e0823df044ad1d4/58b2b0f5a93b07636e1afa93_Alex.png 930w" sizes="(max-width: 479px) 80vw, (max-width: 767px) 70vw, (max-width: 991px) 320px, 410px"/></a>
-				<h4 data-ix="scroll-1" class="h3 _2">Алексей Шаяхов</h4>
-				<p data-ix="scroll-1" class="caps">Аналитика, SEO и ASO<a href="https://hotellook.com" class="link-inline"></a></p>
-				<p data-ix="scroll-1" class="bio-txt">Открывал СЦ <a target="_blank" href="https://kontur.ru" class="link-inline">Контура</a>, продавал и анализировал SEO <br/>в <a href="https://promoexpert.pro" target="_blank" class="link-inline">лучшей компании Екб</a>. Топит за теорию ограничений и карту Шухарта.<a href="https://hotellook.com" target="_blank" class="link-inline"></a></p>
+				<a target="_blank" href="https://www.facebook.com/aleksey.shayahov" class="round-link w-inline-block"><img src="https://mrmixsun.github.io/agency/dist/mishanya.png" data-ix="scroll-1" srcset="https://mrmixsun.github.io/agency/dist/mishanya.png 500w, https://mrmixsun.github.io/agency/dist/mishanya.png 930w" sizes="(max-width: 479px) 80vw, (max-width: 767px) 70vw, (max-width: 991px) 320px, 410px"/></a>
+				<h4 data-ix="scroll-1" class="h3 _2">Мишаня Сторожилов</h4>
+				<p data-ix="scroll-1" class="caps">тактика и реализация</p>
+				<p data-ix="scroll-1" class="bio-txt">Пришёл в IT фронтендером, был PM и руководителем веб-студии, специалистом по техномаркетингу в 2ГИС, организовывал Devday, CodeFest, FrontFest и конференцию Груша.</p>
 			</div>
 		</div>
 	</div>
