--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 				<a target="_blank" href="https://www.facebook.com/aleksey.shayahov" class="round-link w-inline-block"><img src="https://mrmixsun.github.io/agency/dist/mishanya.png" data-ix="scroll-1" srcset="https://mrmixsun.github.io/agency/dist/mishanya.png 500w, https://mrmixsun.github.io/agency/dist/mishanya.png 930w" sizes="(max-width: 479px) 80vw, (max-width: 767px) 70vw, (max-width: 991px) 320px, 410px"/></a>
 				<h4 data-ix="scroll-1" class="h3 _2">Мишаня Сторожилов</h4>
 				<p data-ix="scroll-1" class="caps">тактика и реализация</p>
-				<p data-ix="scroll-1" class="bio-txt">Был фронтендером, PM, специалистом по техномаркетингу в 2ГИС, организовывал Devday, CodeFest, FrontFest и конференцию Груша.</p>
+				<p data-ix="scroll-1" class="bio-txt">Был фронтендером, PM, специалистом по&nbsp;техномаркетингу в 2ГИС, организовывал Devday, CodeFest, FrontFest и&nbsp;конференцию Груша.</p>
 			</div>
 		</div>
 	</div>
