--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 		</div>
 	</div>
 
-	<div class="_25-effra">
+	<!--div class="_25-effra">
 		<div class="smi-block">
 			<div data-ix="price-3" class="smi-box">
 				<a href="https://www.iguides.ru/main/special/2017_galaxy_note/note8_outmarketing/" target="_blank" class="smi-img w-inline-block">
@@ -287,32 +287,11 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section-->
 
 	<section id="contact-us" class="contact-us">
 		<p data-ix="scroll-1" class="_25-effra">Можно прямо сейчас задать друг другу вопросы и запланировать скайп-колл. Через неделю накидаем черновой маркетинг-план.</p>
-		<a href="https://telegram.me/motoro11er" data-ix="button-scroll" target="_blank" class="telegram-button w-button">Напишите в Телеграм</a>
-		<div data-ix="scroll-1" id="target" class="contact-us-form">
-			<div class="price-txt">или</div>
-			<a href="#target" data-ix="form-appear" class="contact-link">через форму связи</a>
-			<div data-ix="form-wrapper" class="form-wrapper w-form">
-				<form id="email-form" name="email-form" data-name="Email Form">
-					<p class="text">Нам тоже не терпится пообщаться. Напишите пару строк о том, чем занимается ваша компания, и что хотите получить от нас.</p>
-					<input type="email" class="field w-input" maxlength="256" name="email" data-name="Email" placeholder="Введите email" id="email" required=""/>
-					<textarea id="field" name="field" placeholder="Что вам угодно, наш господин?" maxlength="5000" class="textarea w-input"></textarea>
-					<input type="submit" value="Отправить" data-wait="Please wait..." class="button w-button"/>
-					<p class="paragraph">Отправляя форму, вы <a target="_blank">соглашаетесь</a> с <a href="https://drive.google.com/file/d/0B74bKdCMwC1Pc0U3dGZKWWpnSVE/view?usp=sharing" target="_blank" class="link-2">условиями передачи информации</a></p>
-				</form>
-				<div class="success-message w-form-done">
-					<div>
-						<strong>Спасибо!</strong> <br/>Постараемся ответить за час.
-					</div>
-				</div>
-				<div class="w-form-fail">
-					<div>Oops! Something went wrong while submitting the form</div>
-				</div>
-			</div>
-		</div>
+		<a href="https://telegram.me/adolgushev" data-ix="button-scroll" target="_blank" class="telegram-button w-button">Напишите в Телеграм</a>
 	</section>
 
 	<div class="footer-section">
