--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 		<a href="https://telegram.me/adolgushev" data-ix="button-scroll" target="_blank" class="telegram-button w-button">Напишите в Телеграм</a>
 	</section>
 
-	<div class="footer-section">
+	<!--div class="footer-section">
 		<div class="footer-block">
 			<div class="footer-link-wrapper">
 				<a href="tel:+7915470-10-28" data-ix="scroll-1" class="phone-link">+7 915 470-10-28</a>
@@ -352,7 +352,7 @@
 				<div class="second-column"><div>044525999</div></div>
 			</div>
 		</div>
-	</div>
+	</div-->
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
 	<script src="https://uploads-ssl.webflow.com/5857d8852e0823df044ad1d4/js/webflow.ab20d8029.js" type="text/javascript"></script><!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
