--- a/index.html
+++ b/index.html
@@ -195,14 +195,14 @@
 	<div class="who">
 		<div id="who" class="dima-block">
 			<div class="info-box">
-				<a target="_blank" href="https://www.facebook.com/profile.php?id=1006819863" class="round-link w-inline-block"><img src="https://mrmixsun.github.io/agency/dist/alyoshka.png" data-ix="scroll-1" srcset="https://mrmixsun.github.io/agency/dist/alyoshka.png 500w, https://mrmixsun.github.io/agency/dist/alyoshka.png 930w" sizes="(max-width: 479px) 80vw, (max-width: 767px) 70vw, (max-width: 991px) 320px, 410px"/></a>
+				<a target="_blank" href="https://www.facebook.com/aleksey.dolgushev" class="round-link w-inline-block"><img src="https://mrmixsun.github.io/agency/dist/alyoshka.png" data-ix="scroll-1" srcset="https://mrmixsun.github.io/agency/dist/alyoshka.png 500w, https://mrmixsun.github.io/agency/dist/alyoshka.png 930w" sizes="(max-width: 479px) 80vw, (max-width: 767px) 70vw, (max-width: 991px) 320px, 410px"/></a>
 				<h4 data-ix="scroll-1" class="h3 _2">Лёша Долгушев</h4>
 				<p data-ix="scroll-1" class="caps">стратегия и планирование</p>
 				<p data-ix="scroll-1" class="bio-txt">Программировал машинное зрение, делал онлайн и оффлайн маркетинг, управлял проектами, управлял продуктами, организовывал CodeFest.</p>
 			</div>
 
 			<div class="info-box">
-				<a target="_blank" href="https://www.facebook.com/aleksey.shayahov" class="round-link w-inline-block"><img src="https://mrmixsun.github.io/agency/dist/mishanya.png" data-ix="scroll-1" srcset="https://mrmixsun.github.io/agency/dist/mishanya.png 500w, https://mrmixsun.github.io/agency/dist/mishanya.png 930w" sizes="(max-width: 479px) 80vw, (max-width: 767px) 70vw, (max-width: 991px) 320px, 410px"/></a>
+				<a target="_blank" href="https://www.facebook.com/mihail.storozhilov" class="round-link w-inline-block"><img src="https://mrmixsun.github.io/agency/dist/mishanya.png" data-ix="scroll-1" srcset="https://mrmixsun.github.io/agency/dist/mishanya.png 500w, https://mrmixsun.github.io/agency/dist/mishanya.png 930w" sizes="(max-width: 479px) 80vw, (max-width: 767px) 70vw, (max-width: 991px) 320px, 410px"/></a>
 				<h4 data-ix="scroll-1" class="h3 _2">Мишаня Сторожилов</h4>
 				<p data-ix="scroll-1" class="caps">тактика и реализация</p>
 				<p data-ix="scroll-1" class="bio-txt">Был фронтендером, PM, специалистом по&nbsp;техномаркетингу в 2ГИС, организовывал Devday, CodeFest, FrontFest и&nbsp;конференцию Груша.</p>
