--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
 	<meta charset="utf-8"/>
 	<title>Агентство HR маркетинга Долгушева и Сторожилова</title>
-	<meta content="Помогаем хорошим продуктам выйти на рынок и наладить маркетинг. Вы развиваете продукт, мы заботимся о привлечении клиентов." name="description"/><meta content="Аутмаркетинг — удалённый отдел маркетинга" property="og:title"/>
-	<meta content="Помогаем хорошим продуктам выйти на рынок и наладить маркетинг. Вы развиваете продукт, мы заботимся о привлечении клиентов." property="og:description"/><meta content="https://daks2k3a4ib2z.cloudfront.net/5857d8852e0823df044ad1d4/58b18ea5d63ba01922067689_Opengraph.png" property="og:image"/><meta content="summary" name="twitter:card"/>
+	<meta content="Помогаем хорошим компаниям наладить HR маркетинг. Позаботимся о том, чтобы нанимать эффективнее." name="description"/>
+	<meta content="Уютное агентство HR маркетинга Долгушева и Сторожилова" property="og:title"/>
+	<meta content="Помогаем хорошим компаниям наладить HR маркетинг. Позаботимся о том, чтобы нанимать эффективнее." property="og:description"/>
+	<meta content="https://mrmixsun.github.io/agency/dist/opengraph.jpg" property="og:image"/>
+	<meta content="summary" name="twitter:card"/>
 	<meta content="width=device-width, initial-scale=1" name="viewport"/>
 	<link href="https://uploads-ssl.webflow.com/5857d8852e0823df044ad1d4/css/outmarketing.webflow.f7295dff7.css" rel="stylesheet" type="text/css"/>
 
