--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	
 	<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
 	<script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-	<link href="https://daks2k3a4ib2z.cloudfront.net/5857d8852e0823df044ad1d4/58b0185894558e53211829f9_favicon.png" rel="shortcut icon" type="image/x-icon"/>
+	<link href="https://mrmixsun.github.io/agency/dist/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 	<link href="https://daks2k3a4ib2z.cloudfront.net/5857d8852e0823df044ad1d4/58b0199d0e83d6927df2d088_256.png" rel="apple-touch-icon"/>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.1/remodal.min.css" rel="stylesheet" type="text/css">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.1/remodal-default-theme.min.css" rel="stylesheet" type="text/css">
@@ -40,7 +40,8 @@
 				<div class="top-wrapper" style="max-width: 90%;">
 					<h1 id="h1" data-ix="appear-1" class="h1 right" font-family: "Rubik Mono One",ArialMT,Arial,"Helvetica Neue",Helvetica,Roboto,sans-serif;>Мы помогаем IT-компаниям добывать себе сторонников среди инженеров</h1>
 					<p data-ix="appear-2" class="simple-text">Сторонники идут работать в компанию и приводят с собой знакомых. Внутри компании сторонники участвуют в улучшении процессов. Сторонникам не всё равно.</br></br>     
-					С людьми в IT всё непросто. Раньше было достаточно иметь в компании сильную экспертизу, интересные проекты и базовые точки входа (сайт, вакансии на внешних площадках). И люди шли к вам работать. Сейчас приходится заниматься активным хантингом. Классные специалисты выбирают среди предложений от компаний, а не компании среди толп соискателей.</br></br>     
+					С людьми в IT всё непросто. Раньше было достаточно иметь в компании сильную экспертизу, интересные проекты и базовые точки входа (сайт, вакансии на внешних площадках). И люди шли к вам работать. Сейчас приходится заниматься активным хантингом. Классные специалисты выбирают среди предложений от компаний, а не компании среди толп соискателей.</br></br>  
+					<!-- то, что выше — влезает на первый экран -->   
 					Время закрытия вакансии и число холодных контактов на позицию – растут. Запросы и зарплаты кандидатов – растут. А вот уровень кандидатов растёт не в каждом случае. Непонятно, где искать классных специалистов. Классные специалисты не ищут работу. </br></br>  
 					Компании увеличивают зарплату, улучшают условия труда, покупают печеньки на кухню, заменяют печеньки на ЗОЖ-перекусы, прокачивают ДМС. Завлекают возможностью использования новых технологий. Результат тот же. </br></br>     
 					Сегодня для найма компаниям нужен маркетинг, направленный на потенциальных сотрудников. Компаниям нужна заметность. А ещё нужна поддержка этого маркетинга со стороны действующих сотрудников. Компаниям нужна вовлечённость. </br></br>     
