--- a/index.html
+++ b/index.html
@@ -38,15 +38,14 @@
 		<div id="utp-screen" class="utp-screen">
 			<div class="top-box">
 				<div class="top-wrapper" style="max-width: 90%;">
-					<h1 id="h1" data-ix="appear-1" class="h1 right" font-family: "Rubik Mono One",ArialMT,Arial,"Helvetica Neue",Helvetica,Roboto,sans-serif;>Мы помогаем IT-компаниям добывать себе сторонников среди инженеров</h1>
-					<p data-ix="appear-2" class="simple-text">Сторонники идут работать в компанию и приводят с собой знакомых. Внутри компании сторонники участвуют в улучшении процессов. Сторонникам не всё равно.</br></br>     
-					С людьми в IT всё непросто. Раньше было достаточно иметь в компании сильную экспертизу, интересные проекты и базовые точки входа (сайт, вакансии на внешних площадках). И люди шли к вам работать. Сейчас приходится заниматься активным хантингом. Классные специалисты выбирают среди предложений от компаний, а не компании среди толп соискателей.</br></br>  
-					<!-- то, что выше — влезает на первый экран -->   
+					<h1 id="h1" data-ix="appear-1" class="h1 right" font-family: "Rubik Mono One",ArialMT,Arial,"Helvetica Neue",Helvetica,Roboto,sans-serif;>Помогаем IT-компаниям нанимать проще и эффективнее</h1>
+					<p data-ix="appear-2" class="simple-text">Мы занимаемся HR маркетингом. Выстраиваем процессы внутри и вокруг компании так, чтобы стать заметными для потенциальных сотрудников и любимыми для тех, кто уже с вами.
+					<!-- то, что выше — влезает на первый экран >   
 					Время закрытия вакансии и число холодных контактов на позицию – растут. Запросы и зарплаты кандидатов – растут. А вот уровень кандидатов растёт не в каждом случае. Непонятно, где искать классных специалистов. Классные специалисты не ищут работу. </br></br>  
 					Компании увеличивают зарплату, улучшают условия труда, покупают печеньки на кухню, заменяют печеньки на ЗОЖ-перекусы, прокачивают ДМС. Завлекают возможностью использования новых технологий. Результат тот же. </br></br>     
 					Сегодня для найма компаниям нужен маркетинг, направленный на потенциальных сотрудников. Компаниям нужна заметность. А ещё нужна поддержка этого маркетинга со стороны действующих сотрудников. Компаниям нужна вовлечённость. </br></br>     
 					Это то, чем мы занимаемся.
-					</p>
+					</p-->
 				</div>
 			</div>
 			<div data-ix="appear-4" class="top-box">
