change pitch section

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
 <body class="body">
 	
-	<div class="top-block" style="margin-top:80px; min-height: 1550px;>
+	<div class="top-block" style="margin-top:80px; min-height: 700px;>
 		<div id="utp-screen" class="utp-screen">
 			<div class="top-box">
 				<div class="top-wrapper" style="max-width: 90%;">
-					<h1 id="h1" data-ix="appear-1" class="h1 right" font-family: "Rubik Mono One",ArialMT,Arial,"Helvetica Neue",Helvetica,Roboto,sans-serif;>Помогаем IT-компаниям нанимать проще и эффективнее</h1>
-					<p data-ix="appear-2" class="simple-text">Мы занимаемся HR маркетингом. Выстраиваем процессы внутри и вокруг компании так, чтобы стать заметными для потенциальных сотрудников и любимыми для тех, кто уже с вами.
+					<h1 id="h1" data-ix="appear-1" class="h1 right" style="font-family: "Rubik Mono One",ArialMT,Arial,"Helvetica Neue",Helvetica,Roboto,sans-serif;">Помогаем IT-компаниям нанимать проще и&nbsp;эффективнее</h1>
+					<p data-ix="appear-2" class="simple-text" style="margin-top:40px;">Мы занимаемся HR маркетингом. Выстраиваем процессы внутри и вокруг компании так, чтобы стать заметными для потенциальных сотрудников и любимыми для тех, кто уже с вами.
 					<!-- то, что выше — влезает на первый экран >   
 					Время закрытия вакансии и число холодных контактов на позицию – растут. Запросы и зарплаты кандидатов – растут. А вот уровень кандидатов растёт не в каждом случае. Непонятно, где искать классных специалистов. Классные специалисты не ищут работу. </br></br>  
 					Компании увеличивают зарплату, улучшают условия труда, покупают печеньки на кухню, заменяют печеньки на ЗОЖ-перекусы, прокачивают ДМС. Завлекают возможностью использования новых технологий. Результат тот же. </br></br>     
