--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
 	<link href="https://uploads-ssl.webflow.com/5857d8852e0823df044ad1d4/css/outmarketing.webflow.f7295dff7.css" rel="stylesheet" type="text/css"/>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript"></script>	
-	<script type="text/javascript">WebFont.load({  google: {    families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic"]  }});</script>
-	
-	<!--script src="https://use.typekit.net/dod5pnc.js" type="text/javascript"></script-->
-	<!--script type="text/javascript">try{Typekit.load();}catch(e){}</script-->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700&amp;subset=cyrillic-ext" rel="stylesheet">
 	
 	<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
 	<script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
@@ -38,7 +35,7 @@
 		<div id="utp-screen" class="utp-screen">
 			<div class="top-box">
 				<div class="top-wrapper" style="max-width: 90%;">
-					<h1 id="h1" data-ix="appear-1" class="h1 right" style="font-family: Rubik Mono One,ArialMT,Arial,Helvetica Neue,Helvetica,Roboto,sans-serif;">Помогаем компаниям нанимать проще и&nbsp;эффективнее</h1>
+					<h1 id="h1" data-ix="appear-1" class="h1 right" style="font-family: 'Montserrat', sans-serif; font-weight: 600;">Помогаем компаниям нанимать проще и&nbsp;эффективнее</h1>
 					<p data-ix="appear-2" class="simple-text" style="margin-top:40px;">Мы занимаемся HR маркетингом. Выстраиваем процессы внутри и вокруг компании так, чтобы стать заметными для потенциальных сотрудников и любимыми для тех, кто уже с вами.
 					<!-- то, что выше — влезает на первый экран >   
 					Время закрытия вакансии и число холодных контактов на позицию – растут. Запросы и зарплаты кандидатов – растут. А вот уровень кандидатов растёт не в каждом случае. Непонятно, где искать классных специалистов. Классные специалисты не ищут работу. </br></br>  
