--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
 	<meta content="https://mrmixsun.github.io/agency/dist/opengraph.jpg" property="og:image"/>
 	<meta content="summary" name="twitter:card"/>
 	<meta content="width=device-width, initial-scale=1" name="viewport"/>
-	<link href="https://uploads-ssl.webflow.com/5857d8852e0823df044ad1d4/css/outmarketing.webflow.f7295dff7.css" rel="stylesheet" type="text/css"/>
-
+	<link href="https://mrmixsun.github.io/agency/dist/style.css" rel="stylesheet" type="text/css"/>
 	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript"></script>	
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700&amp;subset=cyrillic-ext" rel="stylesheet">
-	
 	<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
 	<script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
 	<link href="https://mrmixsun.github.io/agency/dist/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
-	<link href="https://daks2k3a4ib2z.cloudfront.net/5857d8852e0823df044ad1d4/58b0199d0e83d6927df2d088_256.png" rel="apple-touch-icon"/>
+	<!--link href="https://daks2k3a4ib2z.cloudfront.net/5857d8852e0823df044ad1d4/58b0199d0e83d6927df2d088_256.png" rel="apple-touch-icon"/-->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.1/remodal.min.css" rel="stylesheet" type="text/css">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.1/remodal-default-theme.min.css" rel="stylesheet" type="text/css">
 	<style>
@@ -35,7 +33,7 @@
 		<div id="utp-screen" class="utp-screen">
 			<div class="top-box">
 				<div class="top-wrapper" style="max-width: 90%;">
-					<h1 id="h1" data-ix="appear-1" class="h1 right" style="font-family: 'Montserrat', sans-serif; font-weight: 600;">Помогаем компаниям нанимать проще и&nbsp;эффективнее</h1>
+					<h1 id="h1" data-ix="appear-1" class="h1 right" style="font-family: 'Montserrat', sans-serif; font-weight: 700;">Помогаем компаниям нанимать проще&nbsp;и&nbsp;эффективнее</h1>
 					<p data-ix="appear-2" class="simple-text" style="margin-top:40px;">Мы занимаемся HR маркетингом. Выстраиваем процессы внутри и вокруг компании так, чтобы стать заметными для потенциальных сотрудников и любимыми для тех, кто уже с вами.
 					<!-- то, что выше — влезает на первый экран >   
 					Время закрытия вакансии и число холодных контактов на позицию – растут. Запросы и зарплаты кандидатов – растут. А вот уровень кандидатов растёт не в каждом случае. Непонятно, где искать классных специалистов. Классные специалисты не ищут работу. </br></br>  
