--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div id="utp-screen" class="utp-screen">
 			<div class="top-box">
 				<div class="top-wrapper" style="max-width: 90%;">
-					<h1 id="h1" data-ix="appear-1" class="h1 right" style="font-family: 'Montserrat', sans-serif; font-weight: 700;">Помогаем компаниям нанимать проще&nbsp;и&nbsp;эффективнее</h1>
+					<h1 id="h1" data-ix="appear-1" class="h1 right" style="font-family: 'Montserrat', sans-serif; font-weight: 700;">Помогаем нанимать проще&nbsp;и&nbsp;эффективнее</h1>
 					<p data-ix="appear-2" class="simple-text" style="margin-top:40px;">Мы занимаемся HR маркетингом. Выстраиваем процессы внутри и вокруг компании так, чтобы стать заметными для потенциальных сотрудников и любимыми для тех, кто уже с вами.
 					<!-- то, что выше — влезает на первый экран >   
 					Время закрытия вакансии и число холодных контактов на позицию – растут. Запросы и зарплаты кандидатов – растут. А вот уровень кандидатов растёт не в каждом случае. Непонятно, где искать классных специалистов. Классные специалисты не ищут работу. </br></br>  
