--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
 	<meta content="https://mrmixsun.github.io/agency/dist/opengraph.jpg" property="og:image"/>
 	<meta content="summary" name="twitter:card"/>
 	<meta content="width=device-width, initial-scale=1" name="viewport"/>
-	<link href="https://mrmixsun.github.io/agency/dist/style.css" rel="stylesheet" type="text/css"/>
-	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript"></script>	
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700&amp;subset=cyrillic-ext" rel="stylesheet">
+	<!-- мета и опенграф ↑ -->
+
+	<link href="https://mrmixsun.github.io/agency/dist/style.css" rel="stylesheet" type="text/css"/>	
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700|Open+Sans:300,400,600&amp;subset=cyrillic-ext" rel="stylesheet">
 	<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
-	<script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
 	<link href="https://mrmixsun.github.io/agency/dist/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
-	<!--link href="https://daks2k3a4ib2z.cloudfront.net/5857d8852e0823df044ad1d4/58b0199d0e83d6927df2d088_256.png" rel="apple-touch-icon"/-->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.1/remodal.min.css" rel="stylesheet" type="text/css">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.1/remodal-default-theme.min.css" rel="stylesheet" type="text/css">
+	<script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+	<!--link href="https://daks2k3a4ib2z.cloudfront.net/5857d8852e0823df044ad1d4/58b0199d0e83d6927df2d088_256.png" rel="apple-touch-icon"/-->
+	<!--script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript"></script-->	
 	<style>
 	.remodal-overlay {
 	  background: rgba(0, 0, 0, 0.8);
@@ -27,20 +29,13 @@
 	<meta name="format-detection" content="telephone=no">
 </head>
 
-<body class="body">
-	
+<body class="body">	
 	<div class="top-block" style="margin-top:80px; min-height: 700px;>
 		<div id="utp-screen" class="utp-screen">
 			<div class="top-box">
 				<div class="top-wrapper" style="max-width: 90%;">
 					<h1 id="h1" data-ix="appear-1" class="h1 right" style="font-family: 'Montserrat', sans-serif; font-weight: 700;">Помогаем нанимать проще&nbsp;и&nbsp;эффективнее</h1>
 					<p data-ix="appear-2" class="simple-text" style="margin-top:40px;">Мы занимаемся HR маркетингом. Выстраиваем процессы внутри и вокруг компании так, чтобы стать заметными для потенциальных сотрудников и любимыми для тех, кто уже с вами.
-					<!-- то, что выше — влезает на первый экран >   
-					Время закрытия вакансии и число холодных контактов на позицию – растут. Запросы и зарплаты кандидатов – растут. А вот уровень кандидатов растёт не в каждом случае. Непонятно, где искать классных специалистов. Классные специалисты не ищут работу. </br></br>  
-					Компании увеличивают зарплату, улучшают условия труда, покупают печеньки на кухню, заменяют печеньки на ЗОЖ-перекусы, прокачивают ДМС. Завлекают возможностью использования новых технологий. Результат тот же. </br></br>     
-					Сегодня для найма компаниям нужен маркетинг, направленный на потенциальных сотрудников. Компаниям нужна заметность. А ещё нужна поддержка этого маркетинга со стороны действующих сотрудников. Компаниям нужна вовлечённость. </br></br>     
-					Это то, чем мы занимаемся.
-					</p-->
 				</div>
 			</div>
 			<div data-ix="appear-4" class="top-box">
@@ -353,9 +348,10 @@
 	</div-->
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
-	<script src="https://uploads-ssl.webflow.com/5857d8852e0823df044ad1d4/js/webflow.ab20d8029.js" type="text/javascript"></script><!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
+	<script src="https://uploads-ssl.webflow.com/5857d8852e0823df044ad1d4/js/webflow.ab20d8029.js" type="text/javascript"></script>
+	<!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.1/remodal.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
+	<!--script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
 	<script type="text/javascript">
 	particlesJS("particles-js", 
 
@@ -479,6 +475,6 @@
 	$('#email-form').attr("data-name", formName);
 	$('#email-form').attr("name", formName);
 	})
-	</script>
+	</script-->
 </body>
 </html>
