--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700|Open+Sans:300,400,600&amp;subset=cyrillic-ext" rel="stylesheet">
 	<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
 	<link href="https://mrmixsun.github.io/agency/dist/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.1/remodal.min.css" rel="stylesheet" type="text/css">
+	<!--link href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.1/remodal.min.css" rel="stylesheet" type="text/css">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.1/remodal-default-theme.min.css" rel="stylesheet" type="text/css">
-	<script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+	<script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script-->
 	<!--link href="https://daks2k3a4ib2z.cloudfront.net/5857d8852e0823df044ad1d4/58b0199d0e83d6927df2d088_256.png" rel="apple-touch-icon"/-->
 	<!--script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript"></script-->	
-	<style>
+	<!--style>
 	.remodal-overlay {
 	  background: rgba(0, 0, 0, 0.8);
 	}
-	</style>
+	</style-->
 	<meta name="format-detection" content="telephone=no">
 </head>
 
@@ -347,10 +347,10 @@
 		</div>
 	</div-->
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
-	<script src="https://uploads-ssl.webflow.com/5857d8852e0823df044ad1d4/js/webflow.ab20d8029.js" type="text/javascript"></script>
+	<!--script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
+	<script src="https://uploads-ssl.webflow.com/5857d8852e0823df044ad1d4/js/webflow.ab20d8029.js" type="text/javascript"></script-->
 	<!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.1/remodal.min.js"></script>
+	<!--script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.1/remodal.min.js"></script-->
 	<!--script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
 	<script type="text/javascript">
 	particlesJS("particles-js", 
