--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<div class="top-box">
 				<div class="top-wrapper" style="max-width: 90%;">
 					<h1 id="h1" data-ix="appear-1" class="h1 right" style="font-family: 'Montserrat', sans-serif; font-weight: 700;">Помогаем нанимать проще&nbsp;и&nbsp;эффективнее</h1>
-					<p data-ix="appear-2" class="simple-text" style="margin-top:40px;">Мы занимаемся HR маркетингом. Выстраиваем процессы внутри и вокруг компании так, чтобы стать заметными для потенциальных сотрудников и любимыми для тех, кто уже с вами.
+					<p data-ix="appear-2" class="simple-text" style="margin-top:40px;">Мы занимаемся HR маркетингом. Выстраиваем процессы внутри и вокруг компании так, чтобы стать заметными для потенциальных сотрудников, с помощью тех, кто уже с вами.
 				</div>
 			</div>
 			<div data-ix="appear-4" class="top-box">
@@ -96,7 +96,7 @@
 		</div>
 	</section>
 
-	<section id="what" class="how-it-works">
+	<!--section id="what" class="how-it-works">
 		<div class="row">
 			<h3 data-ix="scroll-2" class="number">1.</h3>
 			<div class="big-box">
@@ -183,7 +183,7 @@
 				</ul>
 			</div>
 		</div>
-	</div>
+	</div-->
 
 	<div class="who">
 		<div id="who" class="dima-block">
@@ -203,7 +203,7 @@
 		</div>
 	</div>
 
-	<!--div class="_25-effra">
+	<div class="_25-effra">
 		<div class="smi-block">
 			<div data-ix="price-3" class="smi-box">
 				<a href="https://www.iguides.ru/main/special/2017_galaxy_note/note8_outmarketing/" target="_blank" class="smi-img w-inline-block">
