fix price block

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 		</div>
 	</div>
 
-	<div class="_25-effra">
+	<!--div class="_25-effra">
 		<div class="smi-block">
 			<div data-ix="price-3" class="smi-box">
 				<a href="https://www.iguides.ru/main/special/2017_galaxy_note/note8_outmarketing/" target="_blank" class="smi-img w-inline-block">
