--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	<section id="why-section" class="why-section" style="padding-top: 100px;">
 		<div class="why-block">
 			<div class="h3-wrapper">
-				<h3 data-ix="scroll-1" class="h3">Пригодимся, если:</h3>
+				<h3 data-ix="scroll-1" class="h3">Мы пригодимся, если:</h3>
 			</div>
 			<div class="cards-block">
 				<div data-ix="scroll-1" class="why-mobile">
@@ -89,7 +89,7 @@
 						<li class="list-item">нужно разовое мероприятие — закрыть горящую вакансию и больше ничего</li>
 						<li class="list-item">нужен аудит, инсайты из которого некому будет делать руками</li>
 						<li class="list-item">ваша бизнес-модель не предполагает профессионального роста сотрудников</li>
-						<li>Любите микроменеджмент и не готовы доверить нам тактику по части эйчаркетинга</li>
+						<li>вы любите микроменеджмент и не готовы доверить нам тактику по части эйчаркетинга</li>
 					</ul>
 				</div>
 			</div>
