--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 			<div class="top-box">
 				<div class="top-wrapper" style="max-width: 90%;">
 					<h1 id="h1" data-ix="appear-1" class="h1 right" style="font-family: 'Montserrat', sans-serif; font-weight: 700;">Помогаем нанимать проще&nbsp;и&nbsp;эффективнее</h1>
-					<p data-ix="appear-2" class="simple-text" style="margin-top:40px;">Мы занимаемся HR маркетингом. Выстраиваем процессы внутри и вокруг компании так, чтобы стать заметными для потенциальных сотрудников, с помощью тех, кто уже с вами.
+					<p data-ix="appear-2" class="simple-text" style="margin-top:40px;">C людьми в IT всё непросто. Создать полезный продукт и подобрать клёвую команду уже недостаточно, чтобы нанимать достаточное количество людей. Нужно выстроить процессы внутри и вокруг компании так, чтобы стать заметными для потенциальных сотрудников. Компаниям нужен HR маркетинг. Это то, чем мы занимаемся</p>
 				</div>
-			</div>
-			<div data-ix="appear-4" class="top-box">
+			</div>			
+			<!--div data-ix="appear-4" class="top-box">
 				<div class="fn1">
 					<div data-ix="circle-scale" class="round w-clearfix">
 						<div class="count">1</div>
@@ -57,7 +57,7 @@
 					</div>
 					<p class="utp-feature-txt">Считаем и контролируем эффективность</p>
 				</div>
-			</div>			
+			</div-->			
 		</div>
 	</div>
 
