--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 			<div class="top-box">
 				<div class="top-wrapper" style="max-width: 90%;">
 					<h1 id="h1" data-ix="appear-1" class="h1 right" style="font-family: 'Montserrat', sans-serif; font-weight: 700;">Помогаем нанимать проще&nbsp;и&nbsp;эффективнее</h1>
-					<p data-ix="appear-2" class="simple-text" style="margin-top:40px;">C людьми в IT всё непросто. Создать полезный продукт и подобрать клёвую команду уже недостаточно, чтобы нанимать достаточное количество людей. Нужно выстроить процессы внутри и вокруг компании так, чтобы стать заметными для потенциальных сотрудников. Компаниям нужен HR маркетинг. Это то, чем мы занимаемся</p>
+					<p data-ix="appear-2" class="simple-text" style="margin-top:40px;">Сегодня для найма компаниям нужен маркетинг, направленный на потенциальных сотрудников. Компаниям нужна заметность.</p> 
+					<p data-ix="appear-2" class="simple-text">А ещё нужна поддержка этого маркетинга со стороны действующих сотрудников. Компаниям нужна вовлечённость.</p> 
+					<p data-ix="appear-2" class="simple-text">Это как раз то, с чем мы можем помочь.</p> 
 				</div>
 			</div>			
 			<!--div data-ix="appear-4" class="top-box">
