change «why» section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,28 @@
 	<section id="why-section" class="why-section" style="padding-top: 100px;">
 		<div class="why-block">
 			<div class="h3-wrapper">
+				<h3 data-ix="scroll-1" class="h3">Что именно мы предлагаем:</h3>
+			</div>
+			<div class="cards-block">
+				<div data-ix="scroll-1" class="why-mobile">
+					<h4 class="table-element-h4">По части заметности</h4>
+					<p class="p"><b>Стратегия и планирование:</b> выявляем культурные, процессные и технологические особенности компании, которые помогают правильно позиционировать компанию на рынке; составляем профиль ваших идеальных кандидатов: что их отличает, где их искать, как достучаться; привязываем активности по эйчаркетингу к бизнес-целям компании и мотивации сотрудников.</p>
+
+					<p class="p"><b>Контент:</b> настраиваем процесс сбора безбуллшитовых технических историй внутри компании; они у вас есть, поверьте; редактируем и помогаем создавать контент — статьи, выступления, коммуникации; учим технарей рассказывать интересно, а маркетологов - технически грамотно; создаём внутренние гайдлайны по контенту.</p> 
+
+					<p class="p"><b>Профильные мероприятия:</b> подбираем митапы и конференции, в которых сотрудники могут участвовать как докладчики-активисты и слушатели-партизаны; помогаем сотрудникам готовить яркие доклады; планируем ваши партнёрские активности с организаторами мероприятий; создаём и развиваем ваши собственные мероприятия.</p>
+				</div>
+				<div data-ix="scroll-2" class="why-mobile w-clearfix">
+					<h4 class="table-element-h4">По части вовлечённости</h4>
+					<p class="p">Открытые вакансии могут возникать у вас не сильно часто. Но в те моменты, когда вакансии есть, вам важно тратить меньше времени на нахождение подходящих кандидатов. А ещё вам важно находить соискателей, которые будут лучше вливаться, будут близкими по духу для команды. </p>
+				</div>			
+			</div>
+		</div>
+	</section>
+
+	<!--section id="why-section" class="why-section" style="padding-top: 100px;">
+		<div class="why-block">
+			<div class="h3-wrapper">
 				<h3 data-ix="scroll-1" class="h3">Мы пригодимся, если:</h3>
 			</div>
 			<div class="cards-block">
@@ -96,7 +118,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section-->
 
 	<!--section id="what" class="how-it-works">
 		<div class="row">
