--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 </head>
 
 <body class="body">	
-	<div class="top-block" style="margin-top:80px; min-height: 700px;>
+	<div class="top-block" style="margin-top:100px; min-height: 400px;>
 		<div id="utp-screen" class="utp-screen">
 			<div class="top-box">
 				<div class="top-wrapper" style="max-width: 90%;">
 					<h1 id="h1" data-ix="appear-1" class="h1 right" style="font-family: 'Montserrat', sans-serif; font-weight: 700;">Помогаем нанимать проще&nbsp;и&nbsp;эффективнее</h1>
-					<p data-ix="appear-2" class="simple-text" style="margin-top:40px;">Сегодня для найма компаниям нужен маркетинг, направленный на потенциальных сотрудников. Компаниям нужна заметность.</p> 
+					<p data-ix="appear-2" class="simple-text" style="margin-top:80px;">Сегодня для найма компаниям нужен маркетинг, направленный на потенциальных сотрудников. Компаниям нужна заметность.</p> 
 					<p data-ix="appear-2" class="simple-text">А ещё нужна поддержка этого маркетинга со стороны действующих сотрудников. Компаниям нужна вовлечённость.</p> 
 					<p data-ix="appear-2" class="simple-text">Это как раз то, с чем мы можем помочь.</p> 
 				</div>
@@ -75,7 +75,13 @@
 
 					<p class="p"><b>Контент:</b> настраиваем процесс сбора безбуллшитовых технических историй внутри компании; они у вас есть, поверьте; редактируем и помогаем создавать контент — статьи, выступления, коммуникации; учим технарей рассказывать интересно, а маркетологов - технически грамотно; создаём внутренние гайдлайны по контенту.</p> 
 
-					<p class="p"><b>Профильные мероприятия:</b> подбираем митапы и конференции, в которых сотрудники могут участвовать как докладчики-активисты и слушатели-партизаны; помогаем сотрудникам готовить яркие доклады; планируем ваши партнёрские активности с организаторами мероприятий; создаём и развиваем ваши собственные мероприятия.</p>
+					<p class="p"><b>Профильные мероприятия:</b> 
+						<ul>
+							<li>подбираем митапы и конференции, в которых сотрудники могут участвовать как докладчики-активисты и слушатели-партизаны;</li>
+							<li>помогаем сотрудникам готовить яркие доклады; планируем ваши партнёрские активности с организаторами мероприятий;</li> 
+							<li>создаём и развиваем ваши собственные мероприятия.</li>
+						</ul>
+					</p>
 				</div>
 				<div data-ix="scroll-2" class="why-mobile w-clearfix">
 					<h4 class="table-element-h4">По части вовлечённости</h4>
