--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<div id="utp-screen" class="utp-screen">
 			<div class="top-box">
 				<div class="top-wrapper" style="max-width: 90%;">
-					<h1 id="h1" data-ix="appear-1" class="h1 right" style="font-family: 'Montserrat', sans-serif; font-weight: 700;">Помогаем нанимать проще&nbsp;и&nbsp;эффективнее</h1>
+					<h1 id="h1" data-ix="appear-1" class="h1 right" style="font-family: 'Montserrat', sans-serif; font-weight: 700;">👌 Помогаем нанимать проще&nbsp;и&nbsp;эффективнее</h1>
 					<p data-ix="appear-2" class="simple-text" style="margin-top:80px;">Сегодня для найма компаниям нужен маркетинг, направленный на потенциальных сотрудников. Компаниям нужна заметность.</p> 
 					<p data-ix="appear-2" class="simple-text">А ещё нужна поддержка этого маркетинга со стороны действующих сотрудников. Компаниям нужна вовлечённость.</p> 
 					<p data-ix="appear-2" class="simple-text">Это как раз то, с чем мы можем помочь.</p> 
