--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@
 	</section-->
 
 	<section id="contact-us" class="contact-us">
-		<p data-ix="scroll-1" class="_25-effra">Можно прямо сейчас задать друг другу вопросы и запланировать скайп-колл. Через неделю накидаем черновой маркетинг-план.</p>
-		<a href="https://telegram.me/adolgushev" data-ix="button-scroll" target="_blank" class="telegram-button w-button">Напишите в Телеграм</a>
+		<p data-ix="scroll-1" class="_25-effra">Можно прямо сейчас задать друг другу вопросы и запланировать скайп-колл. В течение недели накидаем черновой план действий.</p>
+		<a href="https://telegram.me/mrmixsun" data-ix="button-scroll" target="_blank" class="telegram-button w-button">Напишите в Телеграм</a>
 	</section>
 
 	<!--div class="footer-section">
