--- a/index.html
+++ b/index.html
@@ -71,14 +71,25 @@
 			<div class="cards-block">
 				<div data-ix="scroll-1" class="why-mobile">
 					<h4 class="table-element-h4">По части заметности</h4>
-					<p class="p"><b>Стратегия и планирование:</b> выявляем культурные, процессные и технологические особенности компании, которые помогают правильно позиционировать компанию на рынке; составляем профиль ваших идеальных кандидатов: что их отличает, где их искать, как достучаться; привязываем активности по эйчаркетингу к бизнес-целям компании и мотивации сотрудников.</p>
-
-					<p class="p"><b>Контент:</b> настраиваем процесс сбора безбуллшитовых технических историй внутри компании; они у вас есть, поверьте; редактируем и помогаем создавать контент — статьи, выступления, коммуникации; учим технарей рассказывать интересно, а маркетологов - технически грамотно; создаём внутренние гайдлайны по контенту.</p> 
-
+					<p class="p"><b>Стратегия и планирование:</b>
+						<ul>
+							<li>выявляем культурные, процессные и технологические особенности компании, которые помогают правильно позиционировать компанию на рынке;</li> 
+							<li>составляем профиль ваших идеальных кандидатов: что их отличает, где их искать, как достучаться;</li> 
+							<li>привязываем активности по эйчаркетингу к бизнес-целям компании и мотивации сотрудников.</li>
+						</p>
+					<p class="p"><b>Контент:</b>
+						<ul>
+							<li>настраиваем процесс сбора безбуллшитовых технических историй внутри компании (они у вас есть, поверьте);</li> 
+							<li>редактируем и помогаем создавать контент — статьи, выступления, коммуникации;</li> 
+							<li>учим технарей рассказывать интересно, а маркетологов - технически грамотно;</li> 
+							<li>создаём внутренние гайдлайны по контенту.</li>
+						</ul>
+					</p> 
 					<p class="p"><b>Профильные мероприятия:</b> 
 						<ul>
 							<li>подбираем митапы и конференции, в которых сотрудники могут участвовать как докладчики-активисты и слушатели-партизаны;</li>
-							<li>помогаем сотрудникам готовить яркие доклады; планируем ваши партнёрские активности с организаторами мероприятий;</li> 
+							<li>помогаем сотрудникам готовить яркие доклады;</li> 
+							<li>планируем ваши партнёрские активности с организаторами мероприятий;</li> 
 							<li>создаём и развиваем ваши собственные мероприятия.</li>
 						</ul>
 					</p>
