--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							<li>привязываем активности по эйчаркетингу к бизнес-целям компании и мотивации сотрудников.</li>
 						</ul>
 						</p>
-					<p class="p"><b>Контент:</b>
+					<p class="p" style="margin-top: 30px;"><b>Контент:</b>
 						<ul>
 							<li>настраиваем процесс сбора безбуллшитовых технических историй внутри компании (они у вас есть, поверьте);</li> 
 							<li>редактируем и помогаем создавать контент — статьи, выступления, коммуникации;</li> 
@@ -86,7 +86,7 @@
 							<li>создаём внутренние гайдлайны по контенту.</li>
 						</ul>
 					</p> 
-					<p class="p"><b>Профильные мероприятия:</b> 
+					<p class="p" style="margin-top: 30px;"><b>Профильные мероприятия:</b> 
 						<ul>
 							<li>подбираем митапы и конференции, в которых сотрудники могут участвовать как докладчики-активисты и слушатели-партизаны;</li>
 							<li>помогаем сотрудникам готовить яркие доклады;</li> 
@@ -97,7 +97,12 @@
 				</div>
 				<div data-ix="scroll-2" class="why-mobile w-clearfix">
 					<h4 class="table-element-h4">По части вовлечённости</h4>
-					<p class="p">Открытые вакансии могут возникать у вас не сильно часто. Но в те моменты, когда вакансии есть, вам важно тратить меньше времени на нахождение подходящих кандидатов. А ещё вам важно находить соискателей, которые будут лучше вливаться, будут близкими по духу для команды. </p>
+					<p class="p"><b>Онбординг</b><br/>разрабатываем программу адаптации новичков к культурным и процессным устоям. 
+					<b>Программы профессионального роста:</b><br/>помогаем формализовать дорожные карты по техническим навыкам (hard skills) и работе с людьми (soft skills).
+					<b>Обучение в формате Employee-to-Employee:</b><br/>выстраиваем процесс расшаривания лучших практик и обучения одних коллег другими.
+					<b>Внутренние мероприятия:</b><br/>организовываем мероприятия, через которые транслируются ценности компании и раскрывается потенциал сотрудников; например, хакатоны. 
+					<b>Сообщества:</b><br/>создаём условия, при которых люди могут найти в компании единомышленников. 
+					<b>Внутренние каналы коммуникации:</b><br/>настраиваем процессы общения между руководством и сотрудниками: чтобы первые лучше представляли настроения внутри компании, а вторые знали, что к ним прислушиваются и их мнение способно что-то изменить.</p>
 				</div>			
 			</div>
 		</div>
