upd internal content

--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
 				</div>
 				<div data-ix="scroll-2" class="why-mobile w-clearfix">
 					<h4 class="table-element-h4">По части вовлечённости</h4>
-					<p class="p"><b>Онбординг</b><br/>разрабатываем программу адаптации новичков к культурным и процессным устоям. 
-					<b>Программы профессионального роста:</b><br/>помогаем формализовать дорожные карты по техническим навыкам (hard skills) и работе с людьми (soft skills).
-					<b>Обучение в формате Employee-to-Employee:</b><br/>выстраиваем процесс расшаривания лучших практик и обучения одних коллег другими.
-					<b>Внутренние мероприятия:</b><br/>организовываем мероприятия, через которые транслируются ценности компании и раскрывается потенциал сотрудников; например, хакатоны. 
-					<b>Сообщества:</b><br/>создаём условия, при которых люди могут найти в компании единомышленников. 
-					<b>Внутренние каналы коммуникации:</b><br/>настраиваем процессы общения между руководством и сотрудниками: чтобы первые лучше представляли настроения внутри компании, а вторые знали, что к ним прислушиваются и их мнение способно что-то изменить.</p>
+					<p class="p"><b>Онбординг</b><br/>разрабатываем программу адаптации новичков к культурным и процессным устоям.</p> 
+					<p class="p" style="margin-top: 30px;"><b>Программы профессионального роста:</b><br/>помогаем формализовать дорожные карты по техническим навыкам (hard skills) и работе с людьми (soft skills).</p>
+					<p class="p" style="margin-top: 30px;"><b>Обучение в формате Employee-to-Employee:</b><br/>выстраиваем процесс расшаривания лучших практик и обучения одних коллег другими.</p>
+					<p class="p" style="margin-top: 30px;"><b>Внутренние мероприятия:</b><br/>организовываем мероприятия, через которые транслируются ценности компании и раскрывается потенциал сотрудников; например, хакатоны.</p> 
+					<p class="p" style="margin-top: 30px;"><b>Сообщества:</b><br/>создаём условия, при которых люди могут найти в компании единомышленников.</p>
+					<p class="p" style="margin-top: 30px;"><b>Внутренние каналы коммуникации:</b><br/>настраиваем процессы общения между руководством и сотрудниками: чтобы первые лучше представляли настроения внутри компании, а вторые знали, что к ним прислушиваются и их мнение способно что-то изменить.</p>
 				</div>			
 			</div>
 		</div>
