--- a/index.html
+++ b/index.html
@@ -233,6 +233,9 @@
 	</div-->
 
 	<div class="who">
+		<div class="h3-wrapper">
+			<h3 data-ix="scroll-1" class="h3">Кто эти граждане?</h3>
+		</div>
 		<div id="who" class="dima-block">
 			<div class="info-box">
 				<a target="_blank" href="https://www.facebook.com/aleksey.dolgushev" class="round-link w-inline-block"><img src="https://mrmixsun.github.io/agency/dist/alyoshka.png" data-ix="scroll-1" srcset="https://mrmixsun.github.io/agency/dist/alyoshka.png 500w, https://mrmixsun.github.io/agency/dist/alyoshka.png 930w" sizes="(max-width: 479px) 80vw, (max-width: 767px) 70vw, (max-width: 991px) 320px, 410px"/></a>
