--- a/index.html
+++ b/index.html
@@ -233,9 +233,6 @@
 	</div-->
 
 	<div class="who">
-		<div class="h3-wrapper">
-			<h3 data-ix="scroll-1" class="h3">Кто эти граждане?</h3>
-		</div>
 		<div id="who" class="dima-block">
 			<div class="info-box">
 				<a target="_blank" href="https://www.facebook.com/aleksey.dolgushev" class="round-link w-inline-block"><img src="https://mrmixsun.github.io/agency/dist/alyoshka.png" data-ix="scroll-1" srcset="https://mrmixsun.github.io/agency/dist/alyoshka.png 500w, https://mrmixsun.github.io/agency/dist/alyoshka.png 930w" sizes="(max-width: 479px) 80vw, (max-width: 767px) 70vw, (max-width: 991px) 320px, 410px"/></a>
@@ -333,7 +330,7 @@
 	</section-->
 
 	<section id="contact-us" class="contact-us">
-		<p data-ix="scroll-1" class="_25-effra">Можно прямо сейчас задать друг другу вопросы и запланировать скайп-колл. В течение недели накидаем черновой план действий.</p>
+		<p data-ix="scroll-1" class="_25-effra">Сейчас самое время задать друг другу вопросы и запланировать встречу или созвон. В течение недели накидаем черновой план действий.</p>
 		<a href="https://telegram.me/mrmixsun" data-ix="button-scroll" target="_blank" class="telegram-button w-button">Напишите в Телеграм</a>
 	</section>
 
