--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
 				</div>
 				<div data-ix="scroll-2" class="why-mobile w-clearfix">
 					<h4 class="table-element-h4">По части вовлечённости</h4>
-					<p class="p"><b>Онбординг</b><br/>разрабатываем программу адаптации новичков к культурным и процессным устоям.</p> 
-					<p class="p" style="margin-top: 30px;"><b>Программы профессионального роста:</b><br/>помогаем формализовать дорожные карты по техническим навыкам (hard skills) и работе с людьми (soft skills).</p>
-					<p class="p" style="margin-top: 30px;"><b>Обучение в формате Employee-to-Employee:</b><br/>выстраиваем процесс расшаривания лучших практик и обучения одних коллег другими.</p>
-					<p class="p" style="margin-top: 30px;"><b>Внутренние мероприятия:</b><br/>организовываем мероприятия, через которые транслируются ценности компании и раскрывается потенциал сотрудников; например, хакатоны.</p> 
-					<p class="p" style="margin-top: 30px;"><b>Сообщества:</b><br/>создаём условия, при которых люди могут найти в компании единомышленников.</p>
-					<p class="p" style="margin-top: 30px;"><b>Внутренние каналы коммуникации:</b><br/>настраиваем процессы общения между руководством и сотрудниками: чтобы первые лучше представляли настроения внутри компании, а вторые знали, что к ним прислушиваются и их мнение способно что-то изменить.</p>
+					<p class="p"><b>Онбординг</b><br/>разрабатываем программу адаптации новичков к&nbsp;культурным и&nbsp;процессным устоям.</p> 
+					<p class="p" style="margin-top: 30px;"><b>Программы профессионального роста:</b><br/>помогаем формализовать дорожные карты по&nbsp;техническим навыкам (hard skills) и&nbsp;работе с&nbsp;людьми (soft skills).</p>
+					<p class="p" style="margin-top: 30px;"><b>Обучение в формате Employee-to-Employee:</b><br/>выстраиваем процесс расшаривания лучших практик и&nbsp;обучения одних коллег другими.</p>
+					<p class="p" style="margin-top: 30px;"><b>Внутренние мероприятия:</b><br/>организуем мероприятия, через которые транслируются ценности компании и&nbsp;раскрывается потенциал сотрудников; например, хакатоны.</p> 
+					<p class="p" style="margin-top: 30px;"><b>Сообщества:</b><br/>создаём условия, при которых люди могут найти в&nbsp;компании единомышленников.</p>
+					<p class="p" style="margin-top: 30px;"><b>Внутренние каналы коммуникации:</b><br/>настраиваем процессы общения между руководством и&nbsp;сотрудниками: чтобы первые лучше представляли настроения внутри компании, а&nbsp;вторые знали, что к&nbsp;ним прислушиваются и&nbsp;их&nbsp;мнение способно что-то изменить.</p>
 				</div>			
 			</div>
 		</div>
@@ -330,7 +330,7 @@
 	</section-->
 
 	<section id="contact-us" class="contact-us">
-		<p data-ix="scroll-1" class="_25-effra">Сейчас самое время задать друг другу вопросы и запланировать встречу или созвон. В течение недели накидаем черновой план действий.</p>
+		<p data-ix="scroll-1" class="_25-effra">Сейчас самое время задать друг другу вопросы и&nbsp;запланировать встречу или созвон. В&nbsp;течение недели накидаем черновой план действий.</p>
 		<a href="https://telegram.me/mrmixsun" data-ix="button-scroll" target="_blank" class="telegram-button w-button">Напишите в Телеграм</a>
 	</section>
 
