add price section

--- a/index.html
+++ b/index.html
@@ -286,14 +286,14 @@
 				</a>
 			</div>
 		</div>
-	</div>
+	</div-->
 
 	<section id="price-section" class="price-section">
 		<div class="chep">
-			<h1 data-ix="scroll-1" class="h3 spec">Бывает и дешевле</h1>
-			<p data-ix="scroll-1" class="_25-effra">Подписка стоит 4 000 $ в месяц. Работаем по предоплате 50%. Бюджет на рекламу отдельный. Всё обсудим до старта.</p>
+			<h1 data-ix="scroll-1" class="h3 spec">Хорошая работа стоит денег</h1>
+			<p data-ix="scroll-1" class="_25-effra">Наша стоит 2 000 $ в месяц. Работаем по предоплате 50% за первый месяц. Всё обсудим до старта.</p>
 		</div>
-		<div class="price-block">
+		<!--div class="price-block">
 			<div class="fake-box">
 				<div data-ix="price" class="price-box">
 					<img src="https://uploads-ssl.webflow.com/5857d8852e0823df044ad1d4/58ade8e1e4e24b39733ca062_%24_optimage.jpg" width="500" srcset="https://uploads-ssl.webflow.com/5857d8852e0823df044ad1d4/58ade8e1e4e24b39733ca062_%24_optimage-p-500x828.jpeg 500w, https://uploads-ssl.webflow.com/5857d8852e0823df044ad1d4/58ade8e1e4e24b39733ca062_%24_optimage-p-800x1325.jpeg 800w, https://uploads-ssl.webflow.com/5857d8852e0823df044ad1d4/58ade8e1e4e24b39733ca062_%24_optimage-p-1080x1788.jpeg 1080w, https://uploads-ssl.webflow.com/5857d8852e0823df044ad1d4/58ade8e1e4e24b39733ca062_%24_optimage.jpg 1282w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 400px, 500px" class="dollar"/>
@@ -326,8 +326,8 @@
 					<p class="mini-text _2">В один момент времени мы обслуживаем не больше 5 компаний, чтобы делать всё на совесть и как для себя. Если кого-то нанимаем, лично проверяем работу. И отвечаем лично.</p>
 				</div>
 			</div>
-		</div>
-	</section-->
+		</div-->
+	</section>
 
 	<section id="contact-us" class="contact-us">
 		<p data-ix="scroll-1" class="_25-effra">Сейчас самое время задать друг другу вопросы и&nbsp;запланировать встречу или созвон. В&nbsp;течение недели накидаем черновой план действий.</p>
